k8s_learning/day8/scenarios/wrong-port.yaml
apiVersion: v1
kind: Service
metadata:
  name: wrong-port-svc
spec:
  selector:
    app: go-app-chart
  ports:
  - port: 80
    targetPort: 9999
  type: ClusterIP
