k8s_learning/day8/scenarios/wrong-selector.yaml
apiVersion: v1
kind: Service
metadata:
  name: wrong-svc
spec:
  selector:
    app: wrong-label
  ports:
  - port: 80
    targetPort: 8080
  type: ClusterIP
