k8s_learning/day8/scenarios/deny-all-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector:
    matchLabels:
      app: go-app-chart
  policyTypes:
  - Ingress
